--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "es6-promise": "^4.2.8",
+    "feather-icons": "^4.28.0",
+    "v-mask": "^2.3.0",
     "vue": "^2.6.11",
+    "vue-inputmask": "^0.2.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.6.2"
   },
